fix(rssguard): default text color is hard to read

--- a/.config/RSS Guard 4/web/user-styles.css
+++ b/.config/RSS Guard 4/web/user-styles.css
@@ -36,6 +36,7 @@
 /*if the website does not provide a background weird stuff happens*/
 html {
     background: var(--main);
+    color: var(--text-color);
 }
 
 #hnmain td[bgcolor="#ff6600"], #hnmain td[bgcolor="#ff6600"] * {
